--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
      
       <img src="assets/img/portfolio_img.jpg" alt="" class="img-fluid rounded-circle" width="150px" height="150px" style="border: 3px solid white ; margin-bottom: 20px; ">
       <h1>Anuradha Bandara</h1>
-      <p style="margin-bottom: 50px">I'm <span class="typed" data-typed-items="Associate Software Engineer, Designer, Developer, Freelancer"></span></p>
+      <p style="margin-bottom: 50px">I'm <span class="typed" data-typed-items="ASE, Designer, Developer, Freelancer"></span></p>
 
       <div id="contact-icons"><span > <img src="assets/img/phone.gif" alt="" class="img-fluid" width="20px" height="20px"></span>   +94 76 689 5501</div>
       <div id="contact-icons"><span> <img src="assets/img/email.gif" alt="" class="img-fluid" width="20px" height=20px"></span>    octasoftware@gmail.com</div>
